--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -23,6 +23,8 @@ Vagrant.configure(2) do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+  config.vm.network "forwarded_port", guest: 5000, host: 5000, host_ip: "127.0.0.1"
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -38,6 +40,7 @@ Vagrant.configure(2) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder "/home/cwcook/Documents/FullStack-Cook/vagrant/www", "/var/www"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -66,6 +69,25 @@ Vagrant.configure(2) do |config|
   # documentation for more information about their specific syntax and use.
   # config.vm.provision "shell", inline: <<-SHELL
   #   sudo apt-get update
-  #   sudo apt-get install -y apache2
+  #   sudo apt-get install -y apache2'
   # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+    apt-get update
+    apt-get install -y apache2
+
+    echo "#!/bin/bash
+    function InstallPip {
+      if [ '$(which pip)' ]; then
+        echo '-- Already installed.'
+        return
+      fi
+      apt-get install python-dev python-setuptools -y -qq
+      curl -O https://raw.github.com/pypa/pip/master/contrib/get-pip.py
+      python get-pip.py
+      rm get-pip.py
+    }
+    echo 'Installing Pip...'; InstallPip
+    echo 'Installing Flask...'; pip install flask
+    exit 0" | /bin/bash
+  SHELL
 end
